--- a/src/app/pages/available-exams/available-exams.component.html
+++ b/src/app/pages/available-exams/available-exams.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container mt-4">
-  <h2 class="mb-4" style="color: #bddaa5;">Available Exams</h2>
+  <h2 class="mb-4" style="color: #B89BFD;">Available Exams</h2>
 
   <div *ngIf="availableExams.length === 0" class="alert alert-info">
     No available exams found.
