--- a/src/app/pages/edit-exam/edit-exam.component.html
+++ b/src/app/pages/edit-exam/edit-exam.component.html
@@ -4,13 +4,13 @@
     <div class="container py-4">
 
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1 class="mb-0" style="color: #bddaa5;">Edit Exam</h1>
+        <h1 class="mb-0" style="color: #DCCDFE;">Edit Exam</h1>
     </div>
     <br><br>
 
 
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h3 class="mb-0" style="color: #bddaa5;">Exam Data</h3>
+        <h3 class="mb-0" style="color: #DCCDFE;">Exam Data</h3>
     </div>
 
     <app-my-form-field lable="Exam Name" [myFieldController]="getExamNameController"></app-my-form-field>
@@ -20,23 +20,23 @@
     <br><hr><br>
 
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h3 class="mb-0" style="color: #bddaa5;">Exam Questions </h3><span style="font-size: 18px;color:#bddaa5;">you can add them later</span> 
+        <h3 class="mb-0" style="color: #DCCDFE;">Exam Questions </h3><span style="font-size: 18px;color:#DCCDFE;">you can add them later</span>
     </div>
 
 
     <br><br>
-    
+
         @for (formGroup of examQuestionsFormGroup; track $index) {
             <app-add-question-card [questionFormGroup]="formGroup" [groupIndex]="$index" (onDeletingQuestionEvent)="deletingQuestion($event)" mode="edit"></app-add-question-card>
             <br>
         }
-    
+
     <br>
 
     <div style="text-align: center;" (click)="addingNewQuestion(null)">
         <app-my-main-button lable="Add Question"></app-my-main-button>
     </div>
-    
+
 
     <br><br>
 
@@ -53,7 +53,7 @@
         </div>
     }
 
-    
+
 
     </div>
 </form>
