--- a/src/app/pages/exam-results/exam-results.component.html
+++ b/src/app/pages/exam-results/exam-results.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 <br>
-    <div *ngIf="examResults.length === 0" class="alert alert-info">
+    <div *ngIf="examResults.length === 0" class="alert alert-info" style="background-color: #DCCDFE; color: #3F04C8;">
         No results found.
     </div>
 
