--- a/src/app/pages/exam-start/exam-start.component.html
+++ b/src/app/pages/exam-start/exam-start.component.html
@@ -1,15 +1,15 @@
 @if (examForm) {
 <div class="container mt-5">
   <form [formGroup]="examForm" (ngSubmit)="submitExam()">
-    <div class="card shadow" style="border-left: 5px solid #597b75;">
-      <div class="card-header text-white" style="background-color: #597b75;">
+    <div class="card shadow" style="border-left: 5px solid #9569FC;">
+      <div class="card-header text-white" style="background-color: #9569FC;">
         <h4 class="mb-0">{{ exam.name }}</h4>
       </div>
-      <div class="card-body" style="background-color: #f9fdf9;">
-        <p><strong>Total Points:</strong> {{ exam.totalPoints }}</p>
-        <p><strong>Duration:</strong> {{ exam.durationInMinutes }} minutes</p>
+      <div class="card-body" style="background-color: #EDE6FE;">
+        <p style="color: #7237FB;"><strong>Total Points:</strong> {{ exam.totalPoints }}</p>
+        <p style="color: #7237FB;"><strong>Duration:</strong> {{ exam.durationInMinutes }} minutes</p>
 
-        <div class="badge bg-warning text-dark p-2 fs-5">
+        <div class="badge text-white p-2 fs-5" style="background-color: #7237FB;">
           ⏱ {{ minutes }}:{{ seconds < 10 ? '0' + seconds : seconds }}
         </div>
 
@@ -18,11 +18,11 @@
         <div formArrayName="answers">
           <div *ngFor="let question of examQuestions; let i = index" [formGroupName]="i" class="mb-4">
             <div class="card mb-2">
-              <div class="card-header d-flex justify-content-between align-items-center" style="background-color: #bddaa5;">
+              <div class="card-header d-flex justify-content-between align-items-center" style="background-color: #B89BFD;">
                 <div>
                     <strong>Q{{ i + 1 }}:</strong> {{ question.questionText }}
                 </div>
-                <span class="badge bg-secondary">{{ question.points }} pts</span>
+                <span class="badge" style="background-color: #3F04C8;">{{ question.points }} pts</span>
             </div>
               <div class="card-body">
                 <div *ngFor="let choice of question.choices">
@@ -48,7 +48,7 @@
             <div *ngIf="errorMessage" class="text-danger fw-semibold">
                 {{ errorMessage }}
             </div>
-            <button class="btn btn-success" type="submit">Finish Exam</button>
+            <button class="btn" type="submit" style="background-color: #9569FC; color: white; font-weight: bold;">Finish Exam</button>
             </div>
       </div>
     </div>
