--- a/src/app/pages/home/admin-home/admin-home.component.html
+++ b/src/app/pages/home/admin-home/admin-home.component.html
@@ -1,14 +1,15 @@
 <div class="container py-4">
 
   <div class="text-center mb-4">
-    <h1 style="color: #bddaa5;">Welcome to Quiz Craft - Dashboard</h1>
-    <h5 style="color: #bddaa5;">Exam Management System</h5>
+    <img src="assets/profile.png" alt="logo" style="max-height: 200px; border-radius: 50%;">
+    <h1 style="color: #B89BFD;">Welcome to Owling - Dashboard</h1>
+    <h5 style="color: #B89BFD;">Exam Management System</h5>
   </div>
   <br>
 
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2 class="mb-0" style="color: #bddaa5;">Available Exams</h2>
-    <button type="button" class="btn custom-green-btn" (click)="goToAddExam()">
+    <h2 class="mb-0" style="color: #B89BFD;">Available Exams</h2>
+    <button type="button" class="btn custom-purple-btn" (click)="goToAddExam()">
       <i class="bi bi-plus-circle me-1"></i> Add Exam
     </button>
   </div>
