--- a/src/app/pages/taken-exams/taken-exams.component.html
+++ b/src/app/pages/taken-exams/taken-exams.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 <div class="container mt-4">
-  <h2 class="mb-4" style="color: #bddaa5;">My Exam Results</h2>
+  <h2 class="mb-4" style="color: #DCCDFE;">My Exam Results</h2>
 
   <div *ngIf="takenExamsResult.length === 0" class="alert alert-info">
     No exam results found.
