--- a/src/app/components/exam-card/exam-card.component.html
+++ b/src/app/components/exam-card/exam-card.component.html
@@ -1,23 +1,23 @@
 <div class="card exam-card shadow-sm mb-4" (click)="showExamDetails(exam.id)">
   <div class="card-body">
-    <h5 class="card-title fw-bold text-primary">{{exam.name}}</h5>
-    
+    <h5 class="card-title fw-bold" style="color: var(--accent-4);">{{exam.name}}</h5>
+
     <div class="row mb-2">
         <div class="col-6">
             <small class="text-muted">Created On</small>
-            <p class="mb-1">{{ exam.createDate | date: 'medium' }}</p>
+            <p class="mb-1" style="color: var(--accent-3);">{{ exam.createDate | date: 'medium' }}</p>
         </div>
 
       <div class="col-6">
         <small class="text-muted">Duration</small>
-        <p class="mb-1">{{exam.durationInMinutes}} mins</p>
+        <p class="mb-1" style="color: var(--accent-3);">{{exam.durationInMinutes}} mins</p>
       </div>
     </div>
 
     <div class="row mb-2">
       <div class="col-6">
         <small class="text-muted">Total Points</small>
-        <p class="mb-1">{{exam.totalPoints}}</p>
+        <p class="mb-1" style="color: var(--accent-3);">{{exam.totalPoints}}</p>
       </div>
       <div class="col-6">
         <small class="text-muted">Available</small>
