--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <div class="input-group mb-4 shadow-sm rounded" style="max-width: 400px;">
-  <span class="input-group-text bg-white border-end-0" style="color: #597b75;">
+  <span class="input-group-text bg-white border-end-0" style="color: #EDE6FE;">
     <i class="bi bi-search"></i>
   </span>
   <input
@@ -8,6 +8,6 @@
     [placeholder]="placeholder"
     [(ngModel)]="searchTerm"
     (input)="onSearchChange()"
-    style="border-color: #bddaa5;"
+    style="border-color: #B89BFD;"
   />
 </div>
