--- a/src/app/components/user-result-card/user-result-card.component.html
+++ b/src/app/components/user-result-card/user-result-card.component.html
@@ -1,8 +1,8 @@
-    <div class="card shadow-sm" style="border-left: 5px solid #597b75;">
-      <div class="card-body" style="background-color: #f9fdf9;">
-        <h5 class="card-title" style="color: #597b75;">{{ result.exam.name }}</h5>
-        <p class="card-text"><strong>Score:</strong> {{ result.score }}</p>
-        <p class="card-text"><strong>Date Taken:</strong> {{ result.dateTaken | date:'longDate' }}</p>
-        <a class="btn btn-outline-primary btn-sm" (click)="goExamResult(result.exam.id)">View Result</a>
+    <div class="card shadow-sm" style="border-left: 5px solid #7237FB;">
+      <div class="card-body" style="background-color: #EDE6FE;">
+        <h5 class="card-title" style="color: #7237FB; font-weight: bold;">{{ result.exam.name }}</h5>
+        <p class="card-text" style="color: #3F04C8"><strong>Score:</strong> {{ result.score }}</p>
+        <p class="card-text" style="color: #3F04C8"><strong>Date Taken:</strong> {{ result.dateTaken | date:'longDate' }}</p>
+        <a class="btn btn-sm" style="background-color: #7237FB; color: white;" (click)="goExamResult(result.exam.id)">View Result</a>
       </div>
     </div>
