--- a/src/app/pages/add-exam/add-exam.component.html
+++ b/src/app/pages/add-exam/add-exam.component.html
@@ -4,13 +4,13 @@
     <div class="container py-4">
 
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1 class="mb-0" style="color: #bddaa5;">Add Exam</h1>
+        <h1 class="mb-0" style="color: #DCCDFE;">Add Exam</h1>
     </div>
     <br><br>
 
 
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h3 class="mb-0" style="color: #bddaa5;">Exam Data</h3>
+        <h3 class="mb-0" style="color: #DCCDFE;">Exam Data</h3>
     </div>
 
     <app-my-form-field lable="Exam Name" [myFieldController]="getExamNameController"></app-my-form-field>
@@ -20,12 +20,12 @@
     <br><hr><br>
 
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h3 class="mb-0" style="color: #bddaa5;">Exam Questions </h3><span style="font-size: 18px;color:#bddaa5;">you can add them later</span> 
+        <h3 class="mb-0" style="color: #DCCDFE;">Exam Questions </h3><span style="font-size: 18px;color:#bddaa5;">you can add them later</span>
     </div>
 
 
     <br><br>
-    
+
 
     @for (formGroup of examQuestionsFormGroup; track $index) {
         <app-add-question-card [questionFormGroup]="formGroup" [groupIndex]="$index" (onDeletingQuestionEvent)="deletingQuestion($event)"></app-add-question-card>
@@ -37,7 +37,7 @@
     <div style="text-align: center;" (click)="addingNewQuestion()">
         <app-my-main-button lable="Add Question"></app-my-main-button>
     </div>
-    
+
 
     <br><br>
 
@@ -54,7 +54,7 @@
         </div>
     }
 
-    
+
 
     </div>
 </form>
