--- a/src/app/pages/home/user-home/user-home.component.html
+++ b/src/app/pages/home/user-home/user-home.component.html
@@ -1,16 +1,17 @@
 <div class="container my-5">
   <div class="text-center mb-4">
-    <h1 style="color: #bddaa5;">Welcome to Quiz Craft</h1>
-    <h5 style="color: #bddaa5;">Exam Management System</h5>
+    <img src="assets/profile.png" alt="logo" style="max-height: 200px; border-radius: 50%;">
+    <h1 style="color: #DCCDFE;">Welcome to Owling</h1>
+    <h5 style="color: #DCCDFE;">Exam Management System</h5>
   </div>
   <br><br>
 
   <!-- Taken Exams -->
 
   <div class="d-flex justify-content-between align-items-center mb-3">
-      <h4 style="color: #bddaa5;" class="mb-0">Exam Results</h4>
-      <a class="btn btn-outline-dark btn-sm fw-semibold" 
-        style="border-color: #597b75; color: #bddaa5;" 
+      <h4 style="color: #DCCDFE;" class="mb-0">Exam Results</h4>
+      <a class="btn btn-outline-dark btn-sm fw-semibold"
+        style="border-color: #9569FC; color: #DCCDFE;"
         (click)="goTakeExams()">
         See more
         <i class="bi bi-arrow-right ms-1"></i>
@@ -37,9 +38,9 @@
   <!-- Available Exams -->
   <div>
     <div class="d-flex justify-content-between align-items-center mb-3">
-      <h4 style="color: #bddaa5;" class="mb-0">Available Exams</h4>
-      <a class="btn btn-outline-dark btn-sm fw-semibold" 
-        style="border-color: #597b75; color: #bddaa5;" 
+      <h4 style="color: #DCCDFE;" class="mb-0">Available Exams</h4>
+      <a class="btn btn-outline-dark btn-sm fw-semibold"
+        style="border-color: #9569FC; color: #DCCDFE;"
         (click)="goAvailableExams()"
         >
         See more
