--- a/src/styles.css
+++ b/src/styles.css
@@ -18,13 +18,13 @@ body {
     min-height: 100vh;
 }
 
-html, body { 
-    height: 100%; 
+html, body {
+    height: 100%;
 }
 
-body { 
-    margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
     color: var(--light-color);
 }
 
@@ -85,3 +85,12 @@ p, span {
     color: rgba(237, 230, 254, 0.7);
 }
 
+.custom-purple-btn {
+  background-color: var(--accent-5);
+  color: white;
+  border: none;
+
+  &:hover {
+    background-color: var(--accent-6); // darker purple for hover effect
+  }
+}
