README File is updated

--- a/src/app/components/exam-card/exam-card.component.html
+++ b/src/app/components/exam-card/exam-card.component.html
@@ -21,7 +21,7 @@
       </div>
       <div class="col-6">
         <small class="text-muted">Available</small>
-        <p class="mb-1">{{ exam.available ? 'Yes' : 'No' }}</p>
+        <p class="mb-1" style="color: var(--accent-3);">{{ exam.available ? 'Yes' : 'No' }}</p>
       </div>
     </div>
   </div>
